--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -10,6 +10,7 @@
 @import "./container.scss";
 @import "./countup.scss";
 @import "./dialog.scss";
+@import "./drawer.scss";
 @import "./dropdown.scss";
 @import "./dropdown-item.scss";
 @import "./dropdown-menu.scss";
@@ -34,6 +35,7 @@
 @import "./scrollbar.scss";
 @import "./select.scss";
 @import "./submenu.scss";
+@import "./surface.scss";
 @import "./table.scss";
 @import "./table-column.scss";
 @import "./tag.scss";
